[tool.poetry]
name = "see"
version = "0.1.0"
description = ""
authors = ["mantrakp <mantrakp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gradio = "^5.1.0"
spaces = "^0.30.4"
llvmlite = "^0.43.0"
numba = "^0.60.0"
whisperx = "^3.1.5"
numpy = "1.26.4"
edge-tts = "^6.1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
